force-app/main/default/objects/Order/fields/Accepted_Subscription_Terms__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Subscription_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted Subscription Terms</label>
    <type>Checkbox</type>
</CustomField>