force-app/main/default/objects/Order/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>