force-app/main/default/objects/Order/fields/Approver_IP__c.field-meta.xml
<CustomField>
    <fullName>Approver_IP__c</fullName>
    <label>Approver IP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>