force-app/main/default/objects/Order/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <label>Approver Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>