force-app/main/default/objects/Order/fields/Approver_Phone__c.field-meta.xml
<CustomField>
    <fullName>Approver_Phone__c</fullName>
    <label>Approver Phone</label>
    <length>32</length>
    <type>Text</type>
</CustomField>