force-app/main/default/objects/Order/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>Captures Client ID from Account.</description>
    <formula>Account.Client_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client ID</label>
    <type>Text</type>
</CustomField>