force-app/main/default/objects/Order/fields/Count_of_Amazon_Goods__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Amazon_Goods__c</fullName>
    <label>Count of Amazon Goods</label>
    <summaryFilterItems>
        <field>OrderItem.Amazon_Sku__c</field>
        <operation>notEqual</operation>
        <value>&quot;&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>