force-app/main/default/objects/Order/fields/Count_of_Customized_Course_Dev__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Customized_Course_Dev__c</fullName>
    <description>Counts the number of Order Products where Product = Count of Customized Course Development</description>
    <label>Count of Customized Course Dev</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>Customized On-Site Course</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>