force-app/main/default/objects/Order/fields/Count_of_Physical_Goods__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Physical_Goods__c</fullName>
    <description>Count the Order Products where product 
family is Physical Goods</description>
    <inlineHelpText>Count the Order Products where product 
family is Physical Goods</inlineHelpText>
    <label>Count of Physical Goods</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>Physical Goods</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>