force-app/main/default/objects/Order/fields/CRM_Statement_Id__c.field-meta.xml
<CustomField>
    <fullName>CRM_Statement_Id__c</fullName>
    <label>CRM Statement Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>