force-app/main/default/objects/Order/fields/Do_Not_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Invoice</label>
    <type>Checkbox</type>
</CustomField>