force-app/main/default/objects/Order/fields/Do_Not_Send_Order_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Order_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Order Confirmation</label>
    <type>Checkbox</type>
</CustomField>