force-app/main/default/objects/Order/fields/Feedback_Score__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Score__c</fullName>
    <label>Feedback Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>