force-app/main/default/objects/Order/fields/Feedback_Wants_Contact__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Wants_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback Wants Contact</label>
    <type>Checkbox</type>
</CustomField>