force-app/main/default/objects/Order/fields/Full_OrderId__c.field-meta.xml
<CustomField>
    <fullName>Full_OrderId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full OrderId</label>
    <type>Text</type>
</CustomField>