force-app/main/default/objects/Order/fields/Import_Source__c.field-meta.xml
<CustomField>
    <fullName>Import_Source__c</fullName>
    <description>Captures the import source of the record. From data migration source.</description>
    <label>Import Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>