force-app/main/default/objects/Order/fields/Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>