force-app/main/default/objects/Order/fields/Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Count__c</fullName>
    <label>Invoice Count</label>
    <summaryForeignKey>Invoice__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>