force-app/main/default/objects/Order/fields/Invoiced_Shipping_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Shipping_Amount__c</fullName>
    <label>Invoiced Shipping Amount</label>
    <summarizedField>OrderItem.Shipping_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Invoiced__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>