force-app/main/default/objects/Order/fields/LearningLogin_Owner_Do_Not_Sync__c.field-meta.xml
<CustomField>
    <fullName>LearningLogin_Owner_Do_Not_Sync__c</fullName>
    <formula>Account.LearningLogin_Owner_Do_Not_Sync__c</formula>
    <label>LearningLogin Owner Do Not Sync</label>
    <type>Checkbox</type>
</CustomField>