force-app/main/default/objects/Order/fields/Order_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Order_Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects the Order to the Account Address record to indicate the billing address. If selected, overrides the written down fields.</description>
    <inlineHelpText>Connects the Order to the Account Address record to indicate the billing address. If selected, overrides the written down fields.</inlineHelpText>
    <label>Order Billing Address</label>
    <referenceTo>Account_Address__c</referenceTo>
    <relationshipLabel>Quotes (Billing Address)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>