force-app/main/default/objects/Order/fields/Order_Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Confirmation Sent</label>
    <type>Checkbox</type>
</CustomField>