force-app/main/default/objects/Order/fields/Order_Owner_Alias__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner_Alias__c</fullName>
    <formula>Owner:User.Alias</formula>
    <label>Order Owner Alias</label>
    <type>Text</type>
</CustomField>