force-app/main/default/objects/Order/fields/Order_Owner_Base_Salary__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner_Base_Salary__c</fullName>
    <formula>Owner:User.Base_Salary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Owner Base Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>