force-app/main/default/objects/Order/fields/Order_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects the Order to the Account Address record to indicate the shipping address. If selected, overrides the written down fields.</description>
    <inlineHelpText>Connects the Order to the Account Address record for the billing address. If selected, overrides the written down fields.</inlineHelpText>
    <label>Order Shipping Address</label>
    <referenceTo>Account_Address__c</referenceTo>
    <relationshipLabel>Quotes (Shipping Address)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>