force-app/main/default/objects/Order/fields/Order_Start_In_YTD__c.field-meta.xml
<CustomField>
    <fullName>Order_Start_In_YTD__c</fullName>
    <formula>and (date(year(Today()), month(EffectiveDate), day(EffectiveDate)) &lt;= Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Start In YTD</label>
    <type>Checkbox</type>
</CustomField>