force-app/main/default/objects/Order/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <formula>Total_Net_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>