force-app/main/default/objects/Order/fields/Order_Total_Without_Tax__c.field-meta.xml
<CustomField>
    <fullName>Order_Total_Without_Tax__c</fullName>
    <formula>Order_Total__c -  Total_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Total (Without Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>