force-app/main/default/objects/Order/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <formula>IF( From_LMS__c = true, &apos;LMS&apos;,
IF( NOT(ISBLANK( Spree_Order_Id__c )), &apos;Web&apos;,
IF( NOT(ISBLANK( SBQQ__Quote__c )), 
 IF( OR(SBQQ__Quote__r.CreatedBy.UserRole.Name = &apos;Client Success Specialist&apos;, SBQQ__Quote__r.CreatedBy.Alias = &apos;slam&apos;), &apos;CSS Quote&apos;, 
 &apos;AM Quote&apos;
),&apos;&apos;
)
)
)</formula>
    <label>Origin</label>
    <type>Text</type>
</CustomField>