force-app/main/default/objects/Order/fields/Original_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Order_Number__c</fullName>
    <formula>OriginalOrder.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Order Number</label>
    <type>Text</type>
</CustomField>