force-app/main/default/objects/Order/fields/Original_Order_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Original_Order_Owner_Email__c</fullName>
    <formula>OriginalOrder.Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Order Owner Email</label>
    <type>Text</type>
</CustomField>