force-app/main/default/objects/Order/fields/OSG_Source__c.field-meta.xml
<CustomField>
    <fullName>OSG_Source__c</fullName>
    <description>Captures the source of the Order for reporting purposes.</description>
    <inlineHelpText>Indicates the source of the Order for reporting purposes.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>Course</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Email/Phone</fullName>
            </value>
            <value>
                <fullName>Email Blast</fullName>
            </value>
            <value>
                <fullName>Evaluation Lead</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>Marketing Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>MOL</fullName>
            </value>
            <value>
                <fullName>Paid Display</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Sales Email</fullName>
            </value>
            <value>
                <fullName>Thought Leadership</fullName>
            </value>
            <value>
                <fullName>Trade Show/Conferences</fullName>
            </value>
            <value>
                <fullName>Training Lead</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>