force-app/main/default/objects/Order/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>Captures Order Owner name for use in reporting as standard fields are not available in custom reports.</description>
    <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Name</label>
    <type>Text</type>
</CustomField>