force-app/main/default/objects/Order/fields/Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Owner_Title__c</fullName>
    <formula>Owner:User.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Title</label>
    <type>Text</type>
</CustomField>