force-app/main/default/objects/Order/fields/Pending_Invoice_Balance__c.field-meta.xml
<CustomField>
    <fullName>Pending_Invoice_Balance__c</fullName>
    <formula>Pending_Invoice_OP_Total__c +  Pending_Invoice_Shipping_Amount__c +  Pending_Invoice_Shipping_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount To Be Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>