force-app/main/default/objects/Order/fields/Pending_Invoice_Shipping_Tax__c.field-meta.xml
<CustomField>
    <fullName>Pending_Invoice_Shipping_Tax__c</fullName>
    <label>Pending Invoice Shipping Tax</label>
    <summarizedField>OrderItem.Shipping_Tax__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Invoiced__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.SBQQ__Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.CreatedDate</field>
        <operation>greaterThan</operation>
        <value>2/1/2018 12:00 AM</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>