force-app/main/default/objects/Order/fields/Percent_of_Original_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Original_Order_Amount__c</fullName>
    <formula>(TotalAmount  / OriginalOrder.TotalAmount) * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent of Original Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>