force-app/main/default/objects/Order/fields/Printed_Available_Dates_and_Times__c.field-meta.xml
<CustomField>
    <fullName>Printed_Available_Dates_and_Times__c</fullName>
    <description>Insert plain text field for Quote Templates.</description>
    <label>Printed Available Dates and Times</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>