force-app/main/default/objects/Order/fields/Promotional_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Code__c</fullName>
    <description>Captures the promotional code(s) that should to apply to the Order. Each unique Promotional Code needs to be separated by a comma.</description>
    <inlineHelpText>Indicates the promotional code(s) that should apply to the Order. Separate each unique Promotional Code with a comma. Promotional Codes not separated by a comma will not be applied.</inlineHelpText>
    <label>Promotional Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>