force-app/main/default/objects/Order/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <description>Captures the client&apos;s purchase order number when booked.</description>
    <label>Purchase Order Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>