force-app/main/default/objects/Order/fields/Quote_Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sales_User__c</fullName>
    <formula>SBQQ__Quote__r.Sales_User__c</formula>
    <label>Quote Sales User</label>
    <type>Text</type>
</CustomField>