force-app/main/default/objects/Order/fields/Reason_for_Refund__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Refund__c</fullName>
    <description>Reason for Refund</description>
    <inlineHelpText>Reason for Refund</inlineHelpText>
    <label>Reason for Refund</label>
    <length>255</length>
    <type>Text</type>
</CustomField>