force-app/main/default/objects/Order/fields/Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>Refund_Status__c</fullName>
    <label>Refund Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>