force-app/main/default/objects/Order/fields/REPORT_Account_Created_By__c.field-meta.xml
<CustomField>
    <fullName>REPORT_Account_Created_By__c</fullName>
    <formula>Account.CreatedBy.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REPORT Account Created By</label>
    <type>Text</type>
</CustomField>