force-app/main/default/objects/Order/fields/Report_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Report_Sales_Owner__c</fullName>
    <formula>IF( 
OR(
Sales_User__c = &apos;slam&apos;,
Sales_User__c = &apos;jmorr&apos;,
Sales_User__c = &apos;amala&apos;,
Sales_User__c = &apos;uqure&apos;,
Sales_User__c = &apos;jyoun&apos;
),
&apos;CSS&apos;,
IF(
OR(
Sales_User__c = &apos;aivan&apos;,
Sales_User__c = &apos;bmath&apos;,
Sales_User__c = &apos;gthom&apos;,
Sales_User__c = &apos;oint&apos;
),
&apos;House&apos;,
Sales_User__c
)
)</formula>
    <label>Report Sales Owner</label>
    <type>Text</type>
</CustomField>