force-app/main/default/objects/Order/fields/SafeGuard__c.field-meta.xml
<CustomField>
    <fullName>SafeGuard__c</fullName>
    <formula>if(
 OR(
 Id = &apos;80146000000eyns&apos;,
 Id = &apos;8014p000001YMEf&apos;
 ),
&quot;Can&apos;t delete this order!&quot;,
&apos;&apos;
)

/*
if((ISBLANK( OrderNumber )),
&quot;Can&apos;t delete this order!&quot;,
&apos;&apos;
)


if(NOT(ISBLANK( OrderNumber )),
&quot;Can&apos;t delete this order!&quot;,
&apos;&apos;
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SafeGuard</label>
    <type>Text</type>
</CustomField>