force-app/main/default/objects/Order/fields/Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_User__c</fullName>
    <label>Sales User</label>
    <length>32</length>
    <type>Text</type>
</CustomField>