force-app/main/default/objects/Order/fields/SBQQ__FirstContractedOrder__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FirstContractedOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If Contracting Method is set to &quot;Single Contract&quot;, this field references the original contracted order, where the single contract is created from. All subsequent contracted subscriptions and assets will be added to the single contract associated to the original contracted order.</description>
    <inlineHelpText>If Contracting Method is set to &quot;Single Contract&quot;, this field references the original contracted order, where the single contract is created from. The field value is set by the system.</inlineHelpText>
    <label>First Contracted Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Single Contracted Orders</relationshipLabel>
    <relationshipName>FirstContractedOrders</relationshipName>
    <type>Lookup</type>
</CustomField>