force-app/main/default/objects/Order/fields/SBQQ__PriceCalcStatusMessage__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PriceCalcStatusMessage__c</fullName>
    <description>The price calculation status message.</description>
    <label>Price Calculation Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>