force-app/main/default/objects/Order/fields/SBQQ__TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TotalAmount__c</fullName>
    <description>The total order amount with tax included</description>
    <inlineHelpText>The total order amount with tax included</inlineHelpText>
    <label>Total Amount (With Tax)</label>
    <summarizedField>OrderItem.SBQQ__TotalAmount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>