force-app/main/default/objects/Order/fields/Shipping_Amount__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Amount__c</fullName>
    <label>Shipping Amount</label>
    <summarizedField>OrderItem.Shipping_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.SBQQ__Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>