force-app/main/default/objects/Order/fields/Spree_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Spree_Order_Id__c</fullName>
    <label>Spree Order Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>