force-app/main/default/objects/Order/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    <label>Sub Total</label>
    <summarizedField>OrderItem.Total_Amount_Without_Tax__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.SBQQ__Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>