force-app/main/default/objects/Order/fields/TestTime__c.field-meta.xml
<CustomField>
    <fullName>TestTime__c</fullName>
    <formula>Text( MILLISECOND( TIMENOW() ) ) &amp; &quot;ms&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestTime</label>
    <type>Text</type>
</CustomField>