force-app/main/default/objects/Order/fields/Total_Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoiced_Amount__c</fullName>
    <formula>Invoiced_OP_Total__c +  Invoiced_Shipping_Amount__c +  Invoiced_Shipping_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>