force-app/main/default/objects/Order/fields/Total_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Amount__c</fullName>
    <description>Calculates to total Order price as Total -Discounts + Tax</description>
    <formula>Sub_Total__c +  Shipping_Amount__c +  Total_Tax__c +  Shipping_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>